--- a/dev-test/codegen.yml
+++ b/dev-test/codegen.yml
@@ -191,6 +191,21 @@ generates:
     config: 
       componentType: class
       globalNamespace: true
+  ./dev-test/githunt:
+    schema: ./dev-test/githunt/schema.json
+    documents: ./dev-test/githunt/**/*.graphql
+    preset: near-operation-file
+    presetConfig:
+      extension: .stencil-component.tsx
+      folder: __generated__
+      baseTypesPath: types.d.ts
+    plugins:
+      - add: // tslint:disable
+      - typescript-operations
+      - typescript-stencil-apollo
+    config: 
+      componentType: class
+      globalNamespace: true
   ./dev-test/star-wars/types.ts:
     schema: ./dev-test/star-wars/schema.json
     documents: ./dev-test/star-wars/**/*.graphql
