--- a/dev-test/codegen.yml
+++ b/dev-test/codegen.yml
@@ -82,6 +82,15 @@ generates:
     plugins:
       - typescript
       - typescript-operations
+  ./dev-test/githunt/types.flatten.preResolveTypes.ts:
+    schema: ./dev-test/githunt/schema.json
+    documents: ./dev-test/githunt/**/*.graphql
+    config:
+      preResolveTypes: true
+      flattenGeneratedTypes: true
+    plugins:
+      - typescript
+      - typescript-operations
   ./dev-test/githunt/types.preResolveTypes.compatibility.ts:
     schema: ./dev-test/githunt/schema.json
     documents: ./dev-test/githunt/**/*.graphql
