--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -84,10 +84,12 @@
     "@types/cosmiconfig": "5.0.3",
     "@types/detect-indent": "5.0.0",
     "@types/inquirer": "6.5.0",
+    "@types/js-yaml": "3.12.1",
     "@types/listr": "0.14.2",
     "@types/log-symbols": "2.0.0",
     "bdd-stdin": "0.2.0",
     "graphql": "14.5.8",
+    "js-yaml": "3.13.1",
     "ts-jest": "24.1.0"
   },
   "peerDependencies": {
