--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -90,6 +90,7 @@
     "bdd-stdin": "0.2.0",
     "graphql": "14.5.8",
     "js-yaml": "3.13.1",
+    "make-dir": "3.0.0",
     "ts-jest": "24.1.0"
   },
   "peerDependencies": {
