Use GraphQL Config

--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -44,6 +44,7 @@
     "@babel/parser": "7.6.4",
     "@graphql-codegen/core": "1.8.1",
     "@graphql-codegen/plugin-helpers": "1.8.1",
+    "@graphql-toolkit/code-file-loader": "0.6.1-alpha-c775427.3",
     "@types/debounce": "1.2.0",
     "@types/is-glob": "4.0.1",
     "@types/mkdirp": "0.5.2",
@@ -58,7 +59,7 @@
     "debounce": "1.2.0",
     "detect-indent": "6.0.0",
     "glob": "7.1.5",
-    "graphql-config": "2.2.1",
+    "graphql-config": "3.0.0-alpha.8",
     "graphql-import": "0.7.1",
     "graphql-tag-pluck": "0.8.6",
     "graphql-toolkit": "0.5.18",
