upgrade toolkit, adjust code

--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -44,7 +44,6 @@
     "@babel/parser": "7.6.4",
     "@graphql-codegen/core": "1.8.1",
     "@graphql-codegen/plugin-helpers": "1.8.1",
-    "@graphql-toolkit/code-file-loader": "0.6.1-alpha-c775427.3",
     "@types/debounce": "1.2.0",
     "@types/is-glob": "4.0.1",
     "@types/mkdirp": "0.5.2",
@@ -62,7 +61,7 @@
     "graphql-config": "3.0.0-alpha.11",
     "graphql-import": "0.7.1",
     "graphql-tag-pluck": "0.8.6",
-    "graphql-toolkit": "0.5.18",
+    "graphql-toolkit": "0.5.19-beta.0",
     "graphql-tools": "4.0.5",
     "indent-string": "4.0.0",
     "inquirer": "7.0.0",
