--- a/packages/graphql-codegen-core/package.json
+++ b/packages/graphql-codegen-core/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.8.2",
     "@graphql-toolkit/common": "0.6.5",
+    "@graphql-toolkit/schema-merging": "0.6.5",
     "tslib": "1.10.0"
   },
   "devDependencies": {
