--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -44,13 +44,13 @@
     "@babel/parser": "7.7.0",
     "@graphql-codegen/core": "1.8.3",
     "@graphql-codegen/plugin-helpers": "1.8.3",
-    "@graphql-toolkit/code-file-loader": "0.6.7",
-    "@graphql-toolkit/core": "0.6.7",
-    "@graphql-toolkit/git-loader": "0.6.7",
-    "@graphql-toolkit/github-loader": "0.6.7",
-    "@graphql-toolkit/graphql-file-loader": "0.6.7",
-    "@graphql-toolkit/json-file-loader": "0.6.7",
-    "@graphql-toolkit/url-loader": "0.6.7",
+    "@graphql-toolkit/code-file-loader": "0.6.8-alpha-8d0ed22.2+8d0ed22",
+    "@graphql-toolkit/core": "0.6.8-alpha-8d0ed22.2+8d0ed22",
+    "@graphql-toolkit/git-loader": "0.6.8-alpha-8d0ed22.2+8d0ed22",
+    "@graphql-toolkit/github-loader": "0.6.8-alpha-8d0ed22.2+8d0ed22",
+    "@graphql-toolkit/graphql-file-loader": "0.6.8-alpha-8d0ed22.2+8d0ed22",
+    "@graphql-toolkit/json-file-loader": "0.6.8-alpha-8d0ed22.2+8d0ed22",
+    "@graphql-toolkit/url-loader": "0.6.8-alpha-8d0ed22.2+8d0ed22",
     "@types/debounce": "1.2.0",
     "@types/is-glob": "4.0.1",
     "@types/mkdirp": "0.5.2",
