--- a/packages/graphql-codegen-core/package.json
+++ b/packages/graphql-codegen-core/package.json
@@ -40,8 +40,8 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.8.3",
-    "@graphql-toolkit/common": "0.6.8",
-    "@graphql-toolkit/schema-merging": "0.6.8",
+    "@graphql-toolkit/common": "0.6.9-alpha-844b7a7.6+844b7a7",
+    "@graphql-toolkit/schema-merging": "0.6.9-alpha-844b7a7.6+844b7a7",
     "tslib": "1.10.0"
   },
   "devDependencies": {
