--- a/packages/plugins/other/schema-ast/package.json
+++ b/packages/plugins/other/schema-ast/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.8.3",
-    "@graphql-toolkit/common": "0.6.8",
+    "@graphql-toolkit/common": "0.6.9-alpha-844b7a7.6+844b7a7",
     "tslib": "1.10.0"
   },
   "devDependencies": {
