--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -44,13 +44,13 @@
     "@babel/parser": "7.7.3",
     "@graphql-codegen/core": "1.8.3",
     "@graphql-codegen/plugin-helpers": "1.8.3",
-    "@graphql-toolkit/code-file-loader": "0.7.0",
-    "@graphql-toolkit/core": "0.7.1",
-    "@graphql-toolkit/git-loader": "0.7.0",
-    "@graphql-toolkit/github-loader": "0.7.1",
-    "@graphql-toolkit/graphql-file-loader": "0.7.1",
-    "@graphql-toolkit/json-file-loader": "0.7.0",
-    "@graphql-toolkit/url-loader": "0.7.1",
+    "@graphql-toolkit/code-file-loader": "0.7.2-alpha-e352388.5+e352388",
+    "@graphql-toolkit/core": "0.7.2-alpha-e352388.5+e352388",
+    "@graphql-toolkit/git-loader": "0.7.2-alpha-e352388.5+e352388",
+    "@graphql-toolkit/github-loader": "0.7.2-alpha-e352388.5+e352388",
+    "@graphql-toolkit/graphql-file-loader": "0.7.2-alpha-e352388.5+e352388",
+    "@graphql-toolkit/json-file-loader": "0.7.2-alpha-e352388.5+e352388",
+    "@graphql-toolkit/url-loader": "0.7.2-alpha-e352388.5+e352388",
     "@types/debounce": "1.2.0",
     "@types/is-glob": "4.0.1",
     "@types/mkdirp": "0.5.2",
