--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -16,7 +16,7 @@
     "lint": "tslint src/**/*.ts",
     "prebuild": "yarn clean",
     "build": "tsc -m esnext --outDir dist/esnext && tsc -m commonjs --outDir dist/commonjs",
-    "test": "jest --config ../../jest.config.js"
+    "test": "jest --no-watchman --runInBand --config ../../jest.config.js"
   },
   "keywords": [
     "gql",
@@ -44,13 +44,13 @@
     "@babel/parser": "7.7.3",
     "@graphql-codegen/core": "1.8.3",
     "@graphql-codegen/plugin-helpers": "1.8.3",
-    "@graphql-toolkit/code-file-loader": "0.7.2-alpha-e352388.5+e352388",
-    "@graphql-toolkit/core": "0.7.2-alpha-e352388.5+e352388",
-    "@graphql-toolkit/git-loader": "0.7.2-alpha-e352388.5+e352388",
-    "@graphql-toolkit/github-loader": "0.7.2-alpha-e352388.5+e352388",
-    "@graphql-toolkit/graphql-file-loader": "0.7.2-alpha-e352388.5+e352388",
-    "@graphql-toolkit/json-file-loader": "0.7.2-alpha-e352388.5+e352388",
-    "@graphql-toolkit/url-loader": "0.7.2-alpha-e352388.5+e352388",
+    "@graphql-toolkit/code-file-loader": "0.7.2-alpha-f06fc20.6+f06fc20",
+    "@graphql-toolkit/core": "0.7.2-alpha-f06fc20.6+f06fc20",
+    "@graphql-toolkit/git-loader": "0.7.2-alpha-f06fc20.6+f06fc20",
+    "@graphql-toolkit/github-loader": "0.7.2-alpha-f06fc20.6+f06fc20",
+    "@graphql-toolkit/graphql-file-loader": "0.7.2-alpha-f06fc20.6+f06fc20",
+    "@graphql-toolkit/json-file-loader": "0.7.2-alpha-f06fc20.6+f06fc20",
+    "@graphql-toolkit/url-loader": "0.7.2-alpha-f06fc20.6+f06fc20",
     "@types/debounce": "1.2.0",
     "@types/is-glob": "4.0.1",
     "@types/mkdirp": "0.5.2",
