--- a/packages/graphql-codegen-cli/tsconfig.json
+++ b/packages/graphql-codegen-cli/tsconfig.json
@@ -4,7 +4,7 @@
     "importHelpers": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "module": "esnext",
+    "module": "commonjs",
     "target": "es2018",
     "lib": ["es6", "esnext", "es2015", "dom"],
     "moduleResolution": "node",
