--- a/packages/plugins/java/apollo-android/package.json
+++ b/packages/plugins/java/apollo-android/package.json
@@ -5,6 +5,7 @@
   "repository": "git@github.com:dotansimha/graphql-code-generator.git",
   "license": "MIT",
   "scripts": {
+    "prepack": "bob-update-version",
     "test": "jest --no-watchman --config ../../../../jest.config.js",
     "build": "bob"
   },
@@ -16,7 +17,7 @@
     "tslib": "1.10.0"
   },
   "devDependencies": {
-    "@ardatan/bob": "0.1.0",
+    "@ardatan/bob": "0.1.4",
     "@types/pluralize": "0.0.29",
     "graphql": "14.5.8",
     "java-ast": "0.1.0",
