--- a/packages/plugins/java/common/package.json
+++ b/packages/plugins/java/common/package.json
@@ -5,6 +5,7 @@
   "repository": "git@github.com:dotansimha/graphql-code-generator.git",
   "license": "MIT",
   "scripts": {
+    "prepack": "bob-update-version",
     "build": "bob"
   },
   "dependencies": {
@@ -14,7 +15,7 @@
     "tslib": "1.10.0"
   },
   "devDependencies": {
-    "@ardatan/bob": "0.1.0",
+    "@ardatan/bob": "0.1.4",
     "graphql": "14.5.8",
     "java-ast": "0.1.0",
     "typescript": "3.7.2"
