--- a/packages/plugins/other/fragment-matcher/package.json
+++ b/packages/plugins/other/fragment-matcher/package.json
@@ -5,6 +5,7 @@
   "repository": "git@github.com:dotansimha/graphql-code-generator.git",
   "license": "MIT",
   "scripts": {
+    "prepack": "bob-update-version",
     "build": "bob",
     "test": "jest --no-watchman --config ../../../../jest.config.js"
   },
@@ -12,7 +13,7 @@
     "@graphql-codegen/plugin-helpers": "1.8.3"
   },
   "devDependencies": {
-    "@ardatan/bob": "0.1.0",
+    "@ardatan/bob": "0.1.4",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "jest": "24.9.0",
