--- a/packages/plugins/other/relay-operation-optimizer/package.json
+++ b/packages/plugins/other/relay-operation-optimizer/package.json
@@ -17,6 +17,7 @@
     "relay"
   ],
   "scripts": {
+    "prepack": "bob-update-version",
     "build": "bob",
     "test": "jest --no-watchman --config ../../../../jest.config.js"
   },
@@ -25,7 +26,7 @@
     "relay-compiler": "6.0.0"
   },
   "devDependencies": {
-    "@ardatan/bob": "0.1.0",
+    "@ardatan/bob": "0.1.4",
     "@graphql-codegen/testing": "1.8.3",
     "@types/jest": "24.0.23",
     "@types/relay-compiler": "6.0.1",
