--- a/packages/plugins/other/visitor-plugin-common/package.json
+++ b/packages/plugins/other/visitor-plugin-common/package.json
@@ -3,6 +3,7 @@
   "version": "1.8.3",
   "license": "MIT",
   "scripts": {
+    "prepack": "bob-update-version",
     "test": "jest --no-watchman --config ../../../../jest.config.js",
     "build": "bob"
   },
@@ -18,7 +19,7 @@
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0"
   },
   "devDependencies": {
-    "@ardatan/bob": "0.1.0",
+    "@ardatan/bob": "0.1.4",
     "@graphql-codegen/testing": "1.8.3",
     "@types/jest": "24.0.23",
     "@types/relay-compiler": "6.0.1",
