--- a/packages/utils/plugins-helpers/package.json
+++ b/packages/utils/plugins-helpers/package.json
@@ -5,6 +5,7 @@
   "repository": "git@github.com:dotansimha/graphql-code-generator.git",
   "license": "MIT",
   "scripts": {
+    "prepack": "bob-update-version",
     "test": "jest --no-watchman --config ../../../jest.config.js",
     "build": "bob"
   },
@@ -19,7 +20,7 @@
     "tslib": "1.10.0"
   },
   "devDependencies": {
-    "@ardatan/bob": "0.1.0",
+    "@ardatan/bob": "0.1.4",
     "jest": "24.9.0",
     "ts-jest": "24.1.0",
     "typescript": "3.7.2"
