--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "clean": "lerna clean --yes && rm -rf node_modules",
     "build": "lerna run build --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website",
-    "test": "lerna run test --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website",
-    "lint": "lerna run lint --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website ",
+    "test": "lerna run test --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website --parallel",
+    "lint": "lerna run lint --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website --parallel",
     "test-and-build": " yarn build && yarn test",
     "prerelease": "yarn test-and-build",
     "prerelease:canary": "yarn test-and-build",
