Added support for union types

--- a/packages/plugins/other/jsdoc-operations/tsconfig.json
+++ b/packages/plugins/other/jsdoc-operations/tsconfig.json
@@ -16,7 +16,8 @@
     "alwaysStrict": true,
     "noImplicitReturns": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "noUnusedParameters": false,
+    "strict": true
   },
   "exclude": ["node_modules", "tests", "dist"]
 }
