--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -47,9 +47,11 @@
     "@graphql-codegen/plugin-helpers": "1.9.1",
     "@graphql-toolkit/code-file-loader": "0.7.4",
     "@graphql-toolkit/core": "0.7.4",
+    "@graphql-toolkit/apollo-engine-loader": "0.7.4",
     "@graphql-toolkit/git-loader": "0.7.4",
     "@graphql-toolkit/github-loader": "0.7.4",
     "@graphql-toolkit/graphql-file-loader": "0.7.4",
+    "@graphql-toolkit/prisma-loader": "0.7.4",
     "@graphql-toolkit/json-file-loader": "0.7.4",
     "@graphql-toolkit/url-loader": "0.7.4",
     "@types/debounce": "1.2.0",
