--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -60,7 +60,11 @@
     "@types/valid-url": "1.0.2",
     "babel-types": "7.0.0-beta.3",
     "chalk": "3.0.0",
-    "change-case": "3.1.0",
+    "pascal-case": "3.1.0",
+    "lower-case": "2.0.1",
+    "upper-case": "2.0.1",
+    "constant-case": "3.0.2",
+    "camel-case": "4.1.0",
     "chokidar": "3.3.0",
     "commander": "4.0.1",
     "common-tags": "1.8.0",
