--- a/packages/utils/config-md-generator/package.json
+++ b/packages/utils/config-md-generator/package.json
@@ -23,7 +23,7 @@
     "typescript": "3.7.3"
   },
   "devDependencies": {
-    "@ardatan/bob": "0.1.8",
+    "bob-the-bundler": "0.2.1",
     "ts-node": "8.5.4"
   }
 }
