--- a/packages/graphql-codegen-core/package.json
+++ b/packages/graphql-codegen-core/package.json
@@ -41,8 +41,8 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.9.1",
-    "@graphql-toolkit/common": "0.7.4",
-    "@graphql-toolkit/schema-merging": "0.7.4",
+    "@graphql-toolkit/common": "0.7.5-alpha-5153853.28+5153853",
+    "@graphql-toolkit/schema-merging": "0.7.5-alpha-5153853.28+5153853",
     "tslib": "1.10.0"
   },
   "devDependencies": {
