--- a/packages/plugins/typescript/vue-apollo/tsconfig.json
+++ b/packages/plugins/typescript/vue-apollo/tsconfig.json
@@ -1,21 +1,18 @@
 {
   "compilerOptions": {
+    "strict": true,
     "esModuleInterop": true,
     "importHelpers": true,
     "module": "esnext",
     "target": "es2018",
-    "lib": ["es6", "esnext", "es2015", "dom"],
-    "suppressImplicitAnyIndexErrors": true,
+    "lib": ["es6", "esnext", "es2015"],
     "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
     "outDir": "./dist/",
-    "noImplicitAny": false,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "exclude": ["node_modules", "tests", "dist", "example"]
 }
