--- a/dev-test/codegen.yml
+++ b/dev-test/codegen.yml
@@ -174,6 +174,20 @@ generates:
       - typescript-react-apollo
     config:
       withHooks: true
+  ./dev-test/githunt/types.reactApollo.imperative.tsx:
+    schema: ./dev-test/githunt/schema.json
+    documents: ./dev-test/githunt/**/*.graphql
+    plugins:
+      - add: // tslint:disable
+      - typescript
+      - typescript-operations
+      - typescript-react-apollo
+    config:
+      withHooks: false
+      withHOC: false
+      withComponent: false
+      withMutationFn: false
+      withImperativeQuery: true
   ./dev-test/githunt/types.stencilApollo.tsx:
     schema: ./dev-test/githunt/schema.json
     documents: ./dev-test/githunt/**/*.graphql
