--- a/packages/plugins/other/schema-ast/package.json
+++ b/packages/plugins/other/schema-ast/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.9.1",
-    "@graphql-toolkit/common": "0.7.5-alpha-862bf62.29+862bf62",
+    "@graphql-toolkit/common": "0.7.5",
     "tslib": "1.10.0"
   },
   "devDependencies": {
