--- a/packages/plugins/typescript/mongodb/package.json
+++ b/packages/plugins/typescript/mongodb/package.json
@@ -16,7 +16,7 @@
     "@graphql-codegen/plugin-helpers": "1.9.1",
     "@graphql-codegen/typescript": "1.9.1",
     "@graphql-codegen/visitor-plugin-common": "1.9.1",
-    "@graphql-toolkit/common": "0.7.5-alpha-862bf62.29+862bf62",
+    "@graphql-toolkit/common": "0.7.5",
     "tslib": "1.10.0"
   },
   "devDependencies": {
