--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,10 @@ jobs:
           export SYSTEM_PULLREQUEST_PULLREQUESTNUMBER=`echo $GITHUB_REF | grep -Eo '[0-9]{1,4}'`
           export BUILD_REPOSITORY_NAME="${{github.repository}}"
           export COMMENT_BODY="WIP"
-          export VERSION=`yarn lerna-current-version`
           export LERNA_PATH="./lerna.json"
+          export ALPHA_VERSION=`yarn lerna-current-version`
           export GH_API_TOKEN="${{ secrets.GH_API_TOKEN }}"
+          echo "alpha: $ALPHA_VERSION"
           yarn pr-comment
       - name: Build
         run: yarn build
