--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,11 +33,13 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: TEST
         run: |
-          echo "test"
+          pwd
+          ls
           export SYSTEM_PULLREQUEST_PULLREQUESTNUMBER=`echo $GITHUB_REF | grep -Eo '[0-9]{1,4}'`
           export BUILD_REPOSITORY_NAME="${{github.repository}}"
           export COMMENT_BODY="WIP"
-          export LERNA_PATH="./lerna.json"
+          export LERNA_PATH="$PWD/lerna.json"
+          echo "lerna path: $LERNA_PATH"
           export ALPHA_VERSION=`yarn lerna-current-version`
           export GH_API_TOKEN="${{ secrets.GH_API_TOKEN }}"
           echo "alpha: $ALPHA_VERSION"
