--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,19 +31,6 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Install Dependencies using Yarn
         run: yarn install --frozen-lockfile
-      - name: TEST
-        run: |
-          pwd
-          ls
-          export SYSTEM_PULLREQUEST_PULLREQUESTNUMBER=`echo $GITHUB_REF | grep -Eo '[0-9]{1,4}'`
-          export BUILD_REPOSITORY_NAME="${{github.repository}}"
-          export COMMENT_BODY="WIP"
-          export LERNA_PATH="$PWD/lerna.json"
-          echo "lerna path: $LERNA_PATH"
-          export ALPHA_VERSION=`yarn lerna-current-version`
-          export GH_API_TOKEN="${{ secrets.GH_API_TOKEN }}"
-          echo "alpha: $ALPHA_VERSION"
-          yarn pr-comment
       - name: Build
         run: yarn build
       - name: Test
@@ -55,6 +42,14 @@ jobs:
             then
                 echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > .npmrc
                 npm run ci:release:canary
+                npm install -g dfds-github-scripts
+                export SYSTEM_PULLREQUEST_PULLREQUESTNUMBER=`echo $GITHUB_REF | grep -Eo '[0-9]{1,4}'`
+                export BUILD_REPOSITORY_NAME="${{github.repository}}"
+                export LERNA_PATH="$PWD/lerna.json"
+                export ALPHA_VERSION=`lerna-current-version`
+                export GH_API_TOKEN="${{ secrets.GH_API_TOKEN }}"
+                export COMMENT_BODY="The latest changes of this PR ([\`$GITHUB_SHA\`](https://github.com/$BUILD_REPOSITORY_NAME/pull/$SYSTEM_PULLREQUEST_PULLREQUESTNUMBER/commits/$GITHUB_SHA)) are available as alpha in NPM: \`$ALPHA_VERSION\`"
+                pr-comment
             else    
                 echo "Skipping canary publish due to a fork/PR..."
             fi
