--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
                 export LERNA_PATH="$PWD/lerna.json"
                 export ALPHA_VERSION=`lerna-current-version`
                 export GH_API_TOKEN="${{ secrets.GH_API_TOKEN }}"
-                export COMMENT_BODY="The latest changes of this PR ([\`$GITHUB_SHA\`](https://github.com/$BUILD_REPOSITORY_NAME/pull/$SYSTEM_PULLREQUEST_PULLREQUESTNUMBER/commits/$GITHUB_SHA)) are available as alpha in NPM: \`$ALPHA_VERSION\`"
+                export COMMENT_BODY="The latest changes of this PR are available as alpha in npm: \`$ALPHA_VERSION\`"
                 pr-comment
             else    
                 echo "Skipping canary publish due to a fork/PR..."
