--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,18 +37,22 @@ jobs:
         run: yarn test
       - name: Release Canary
         run: |
-            echo "Source Repo: ${{github.repository}}"
-            if [ "${{github.repository}}" == "dotansimha/graphql-code-generator" ] && [ "${{ secrets.NODE_AUTH_TOKEN }}" != "" ]
-            then
-                echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > .npmrc
-                npm run ci:release:canary > out.txt
+          echo "Source Repo: ${{github.repository}}"
+          if [ "${{github.repository}}" == "dotansimha/graphql-code-generator" ] && [ "${{ secrets.NODE_AUTH_TOKEN }}" != "" ]
+          then
+              echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > .npmrc
+              npm run ci:release:canary > out.txt
+              export SYSTEM_PULLREQUEST_PULLREQUESTNUMBER=`echo $GITHUB_REF | grep -Eo '[0-9]{1,4}'`
+
+              if [ "$SYSTEM_PULLREQUEST_PULLREQUESTNUMBER" != "" ]
+              then
                 npm install -g dfds-github-scripts
-                export SYSTEM_PULLREQUEST_PULLREQUESTNUMBER=`echo $GITHUB_REF | grep -Eo '[0-9]{1,4}'`
                 export BUILD_REPOSITORY_NAME="${{github.repository}}"
                 export ALPHA_VERSION=`cat out.txt | sed -n 's/.*cli => //p' | sed -n 's/+.*//p'`
                 export GH_API_TOKEN="${{ secrets.GH_API_TOKEN }}"
                 export COMMENT_BODY="The latest changes of this PR are available as alpha in npm: \`$ALPHA_VERSION\`"
                 pr-comment
-            else    
-                echo "Skipping canary publish due to a fork/PR..."
-            fi
+              fi
+          else    
+              echo "Skipping canary publish due to a fork/PR..."
+          fi
