--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@types/jest": "24.0.25",
     "@types/mkdirp": "0.5.2",
     "@types/node": "10.17.13",
-    "@types/react": "16.8.0",
+    "@types/react": "16.9.17",
     "@types/request": "2.48.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -81,5 +81,8 @@
       "prettier --write",
       "git add -f"
     ]
+  },
+  "resolutions": {
+    "@types/react": "16.9.17"
   }
 }
