--- a/packages/graphql-codegen-core/package.json
+++ b/packages/graphql-codegen-core/package.json
@@ -41,8 +41,8 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.10.0",
-    "@graphql-toolkit/common": "0.8.2-alpha-e6711b7.11+e6711b7",
-    "@graphql-toolkit/schema-merging": "0.8.2-alpha-e6711b7.11+e6711b7",
+    "@graphql-toolkit/common": "0.9.0",
+    "@graphql-toolkit/schema-merging": "0.9.0",
     "tslib": "1.10.0"
   },
   "devDependencies": {
