--- a/packages/plugins/other/schema-ast/package.json
+++ b/packages/plugins/other/schema-ast/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.10.0",
-    "@graphql-toolkit/common": "0.8.2-alpha-e6711b7.11+e6711b7",
+    "@graphql-toolkit/common": "0.9.0",
     "tslib": "1.10.0"
   },
   "devDependencies": {
