--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -98,7 +98,7 @@
     "@types/listr": "0.14.2",
     "@types/log-symbols": "2.0.0",
     "bdd-stdin": "0.2.0",
-    "bob-the-bundler": "0.2.2",
+    "@ardatan/bob": "0.2.6",
     "dotenv": "8.2.0",
     "graphql": "14.5.8",
     "js-yaml": "3.13.1",
