--- a/packages/plugins/flow/operations/package.json
+++ b/packages/plugins/flow/operations/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/testing": "1.11.2",
-    "bob-the-bundler": "0.2.2",
+    "@ardatan/bob": "0.2.6",
     "flow-bin": "0.116.0",
     "flow-parser": "0.116.0",
     "graphql": "14.5.8",
