--- a/packages/plugins/java/apollo-android/package.json
+++ b/packages/plugins/java/apollo-android/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@types/pluralize": "0.0.29",
-    "bob-the-bundler": "0.2.2",
+    "@ardatan/bob": "0.2.6",
     "graphql": "14.5.8",
     "java-ast": "0.1.0",
     "jest": "24.8.0",
