--- a/packages/plugins/other/fragment-matcher/package.json
+++ b/packages/plugins/other/fragment-matcher/package.json
@@ -13,7 +13,7 @@
     "@graphql-codegen/plugin-helpers": "1.11.2"
   },
   "devDependencies": {
-    "bob-the-bundler": "0.2.2",
+    "@ardatan/bob": "0.2.6",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "jest": "24.9.0",
