--- a/packages/plugins/other/introspection/package.json
+++ b/packages/plugins/other/introspection/package.json
@@ -14,7 +14,7 @@
     "tslib": "1.10.0"
   },
   "devDependencies": {
-    "bob-the-bundler": "0.2.2",
+    "@ardatan/bob": "0.2.6",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "jest": "24.9.0",
