--- a/packages/plugins/typescript/mongodb/package.json
+++ b/packages/plugins/typescript/mongodb/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/testing": "1.11.2",
-    "bob-the-bundler": "0.2.2",
+    "@ardatan/bob": "0.2.6",
     "graphql": "14.5.8",
     "jest": "24.9.0",
     "ts-jest": "24.3.0",
