--- a/packages/plugins/typescript/vue-apollo/package.json
+++ b/packages/plugins/typescript/vue-apollo/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.11.2",
     "@graphql-codegen/visitor-plugin-common": "1.11.2",
+    "pascal-case": "3.1.1",
     "tslib": "1.10.0"
   },
   "devDependencies": {
