--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 jobs:
 
   test:
-    name: Testing on ${{matrix.os}}/Node ${{matrix.node_version}}/Yarn ${{matrix.yarn_version}}
+    name: ${{matrix.os}}/Node${{matrix.node_version}}/Yarn${{matrix.yarn_version}}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: ${{ matrix.node_version }}
-      - name: Setup Yarn
+      - name: Use Yarn ${{ matrix.node_version }}
         run: |
           if [ "${{ matrix.yarn_version }}" == "1" ] 
           then
@@ -33,8 +33,6 @@ jobs:
           else
             npm install -g yarn@berry
           fi
-
-          yarn -v 
       - name: Install Dependencies using Yarn
         run: yarn install
       - name: Build
