--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
+  "version": "1.11.2",
   "scripts": {
     "clean": "lerna clean --yes && rm -rf node_modules",
-    "build": "lerna run build --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website",
+    "build": "yarn workspaces foreach run build",
     "test": "lerna run test --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website",
     "lint": "lerna run lint --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website",
     "test-and-build": " yarn build && yarn test",
@@ -37,7 +38,6 @@
     ]
   },
   "devDependencies": {
-    "dfds-github-scripts": "0.0.2",
     "@apollo/react-common": "3.1.3",
     "@apollo/react-components": "3.1.3",
     "@apollo/react-hoc": "3.1.3",
@@ -49,13 +49,12 @@
     "@types/node": "10.17.13",
     "@types/react": "16.9.19",
     "@types/request": "2.48.4",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
     "apollo-cache": "1.3.4",
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
     "apollo-server": "2.9.16",
     "apollo-utilities": "1.3.3",
+    "dfds-github-scripts": "0.0.2",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "graphql-tools": "4.0.6",
@@ -65,10 +64,12 @@
     "jest-junit": "10.0.0",
     "lerna": "3.20.2",
     "lint-staged": "10.0.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "rimraf": "3.0.0",
+    "stencil-apollo": "0.1.5",
     "ts-jest": "25.0.0",
     "tslint": "5.20.1",
-    "stencil-apollo": "0.1.5",
     "typescript": "3.7.5",
     "urql": "1.8.2"
   },
