--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "bin": {
     "gql-gen": "dist/bin.js",
-    "graphql-codegen": "dist/bin.js",
-    "graphql-code-generator": "dist/bin.js"
+    "graphql-code-generator": "dist/bin.js",
+    "graphql-codegen": "dist/bin.js"
   },
   "repository": {
     "type": "git",
@@ -91,6 +91,7 @@
     "valid-url": "1.0.9"
   },
   "devDependencies": {
+    "@ardatan/bob": "0.2.7",
     "@types/chokidar": "1.7.5",
     "@types/detect-indent": "5.0.0",
     "@types/inquirer": "6.5.0",
@@ -98,12 +99,13 @@
     "@types/listr": "0.14.2",
     "@types/log-symbols": "2.0.0",
     "bdd-stdin": "0.2.0",
-    "@ardatan/bob": "0.2.7",
     "dotenv": "8.2.0",
     "graphql": "14.5.8",
+    "jest": "25.1.0",
     "js-yaml": "3.13.1",
     "make-dir": "3.0.0",
-    "ts-jest": "25.0.0"
+    "ts-jest": "25.0.0",
+    "typescript": "3.7.5"
   },
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0"
