--- a/packages/graphql-codegen-core/package.json
+++ b/packages/graphql-codegen-core/package.json
@@ -47,7 +47,9 @@
   },
   "devDependencies": {
     "@ardatan/bob": "0.2.7",
-    "ts-jest": "25.0.0"
+    "jest": "25.1.0",
+    "ts-jest": "25.0.0",
+    "typescript": "3.7.5"
   },
   "sideEffects": false,
   "main": "dist/index.cjs.js",
