--- a/packages/utils/plugins-helpers/package.json
+++ b/packages/utils/plugins-helpers/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@ardatan/bob": "0.2.7",
+    "graphql": "14.5.8",
     "jest": "25.1.0",
     "ts-jest": "25.0.0",
     "typescript": "3.7.5"
