--- a/website/live-demo/package.json
+++ b/website/live-demo/package.json
@@ -27,21 +27,25 @@
     "@graphql-codegen/typescript-mongodb": "1.11.2",
     "@graphql-codegen/typescript-operations": "1.11.2",
     "@graphql-codegen/typescript-react-apollo": "1.11.2",
-    "@graphql-codegen/typescript-vue-apollo": "1.11.2",
     "@graphql-codegen/typescript-resolvers": "1.11.2",
     "@graphql-codegen/typescript-stencil-apollo": "1.11.2",
     "@graphql-codegen/typescript-urql": "1.11.2",
+    "@graphql-codegen/typescript-vue-apollo": "1.11.2",
     "@graphql-codegen/website": "1.11.2",
     "@material-ui/core": "4.9.0",
     "@types/codemirror": "0.0.83",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "apollo-client": "2.6.8",
     "codemirror": "5.51.0",
     "codemirror-graphql": "0.11.6",
+    "graphql": "14.5.8",
+    "graphql-tag": "2.10.1",
     "js-yaml": "3.13.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "stencil-apollo": "0.1.5"
   },
   "scripts": {
     "analyze": "NODE_OPTIONS=--max_old_space_size=8192 react-scripts build && source-map-explorer build/static/js/main.*",
