--- a/packages/plugins/other/visitor-plugin-common/package.json
+++ b/packages/plugins/other/visitor-plugin-common/package.json
@@ -13,6 +13,7 @@
     "@graphql-toolkit/relay-operation-optimizer": "0.9.4",
     "auto-bind": "4.0.0",
     "dependency-graph": "0.8.1",
+    "pascal-case": "3.1.1",
     "graphql-tag": "2.10.1",
     "tslib": "1.10.0"
   },
