chore: run tests on node 8

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node_version: [10, 12, 13]
+        node_version: [8, 10, 12, 13]
     steps:
       - name: Checkout Master
         uses: actions/checkout@v1
