--- a/packages/plugins/typescript/oclif/package.json
+++ b/packages/plugins/typescript/oclif/package.json
@@ -7,23 +7,23 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -m esnext --outDir dist/esnext && tsc -m commonjs --outDir dist/commonjs",
-    "test": "jest --config ../../../../jest.config.js"
+    "test": "jest --no-watchman --config ../../../../jest.config.js"
   },
   "peerDependenxcies": {
     "graphql-tag": "^2.0.0"
   },
   "dependencies": {
-    "@graphql-codegen/plugin-helpers": "1.8.1",
-    "@graphql-codegen/visitor-plugin-common": "1.8.1",
+    "@graphql-codegen/plugin-helpers": "1.12.2",
+    "@graphql-codegen/visitor-plugin-common": "1.12.2",
     "tslib": "1.10.0"
   },
   "devDependencies": {
-    "@graphql-codegen/testing": "1.8.1",
+    "@graphql-codegen/testing": "1.12.2",
     "@oclif/command": "^1.5.19",
-    "graphql": "14.5.8",
-    "jest": "24.9.0",
-    "ts-jest": "24.1.0",
-    "typescript": "3.6.4"
+    "graphql": "14.6.0",
+    "jest": "25.1.0",
+    "ts-jest": "25.2.1",
+    "typescript": "3.8.2"
   },
   "sideEffects": false,
   "main": "dist/commonjs/index.js",
