--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "extends": [
     "eslint:recommended",
+    "standard",
     "prettier",
     "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint"
