Shared Jest Cache + Incremental builds + Shared devDeps + DX improvements

--- a/packages/utils/config-md-generator/package.json
+++ b/packages/utils/config-md-generator/package.json
@@ -9,11 +9,11 @@
     "start": "ts-node src/index.ts",
     "build": "bob"
   },
-  "main": "./dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
-  "typescript": {
-    "definition": "dist/index.d.ts"
+  "main": "dist/index.cjs.js",	
+  "module": "dist/index.esm.js",	
+  "typings": "dist/index.d.ts",	
+  "typescript": {	
+    "definition": "dist/index.d.ts"	
   },
   "buildOptions": {
     "input": "./src/index.ts"
@@ -24,7 +24,6 @@
     "typescript": "3.8.3"
   },
   "devDependencies": {
-    "bob-the-bundler": "0.3.4",
     "ts-node": "8.8.1"
   }
 }
