--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,26 @@ jobs:
       - name: Use Node ${{matrix.node_version}}
         uses: actions/setup-node@master
         with:
-          version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.node_version }}
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+        if: matrix.os != 'macos-latest'
+      - name: Cache Yarn
+        uses: actions/cache@v1
+        if: matrix.os != 'macos-latest'
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Cache Jest
+        uses: actions/cache@v1
+        with:
+          path: .cache/jest
+          key: ${{ runner.os }}-jest-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-jest-
       - name: Install Dependencies using Yarn
         run: yarn install
       - name: Lint
@@ -30,7 +49,9 @@ jobs:
       - name: Build
         run: yarn build
       - name: Test
-        run: yarn test
+        run: yarn test --logHeapUsage
+        env:
+          CI: true
       - name: Test dev-tests
         run: |
           dev-test/generate-all.sh
