--- a/packages/plugins/typescript/mongodb/package.json
+++ b/packages/plugins/typescript/mongodb/package.json
@@ -24,26 +24,16 @@
     "graphql-tag": "^2.0.0"
   },
   "devDependencies": {
-    "bob-the-bundler": "0.3.4",
-    "@graphql-codegen/testing": "1.13.1",
-    "@types/lodash": "4.14.149",
-    "graphql": "14.6.0",
-    "jest": "25.1.0",
-    "ts-jest": "25.2.1",
-    "typescript": "3.8.3"
+    "@types/lodash": "4.14.149"
   },
-  "sideEffects": false,
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
-  "typescript": {
-    "definition": "dist/index.d.ts"
+  "main": "dist/index.cjs.js",	
+  "module": "dist/index.esm.js",	
+  "typings": "dist/index.d.ts",	
+  "typescript": {	
+    "definition": "dist/index.d.ts"	
   },
   "buildOptions": {
     "input": "./src/index.ts"
-  },
-  "jest-junit": {
-    "outputDirectory": "../../../../test-results/typescript-mongodb"
   },
   "publishConfig": {
     "access": "public"
