--- a/packages/plugins/typescript/oclif/package.json
+++ b/packages/plugins/typescript/oclif/package.json
@@ -22,25 +22,16 @@
     "tslib": "1.11.1"
   },
   "devDependencies": {
-    "bob-the-bundler": "0.3.4",
-    "@graphql-codegen/testing": "1.13.1",
-    "@oclif/command": "1.5.19",
-    "jest": "25.1.0",
-    "ts-jest": "25.2.1",
-    "typescript": "3.8.3"
+    "@oclif/command": "1.5.19"
   },
-  "sideEffects": false,
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
-  "typescript": {
-    "definition": "dist/index.d.ts"
+  "main": "dist/index.cjs.js",	
+  "module": "dist/index.esm.js",	
+  "typings": "dist/index.d.ts",	
+  "typescript": {	
+    "definition": "dist/index.d.ts"	
   },
   "buildOptions": {
     "input": "./src/index.ts"
-  },
-  "jest-junit": {
-    "outputDirectory": "../../../../test-results/typescript-operations"
   },
   "publishConfig": {
     "access": "public"
