--- a/packages/plugins/java/apollo-android/package.json
+++ b/packages/plugins/java/apollo-android/package.json
@@ -2,13 +2,15 @@
   "name": "@graphql-codegen/java-apollo-android",
   "version": "1.13.1",
   "description": "GraphQL Code Generator plugin for generating Java classes for Apollo-Android",
-  "repository": "git@github.com:dotansimha/graphql-code-generator.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dotansimha/graphql-code-generator.git",
+    "directory": "packages/plugins/java/apollo-android"
+  },
   "license": "MIT",
   "scripts": {
     "lint": "eslint **/*.ts",
-    "prepack": "bob-update-version",
-    "test": "jest --no-watchman --config ../../../../jest.config.js",
-    "build": "bob"
+    "test": "jest --no-watchman --config ../../../../jest.config.js"
   },
   "dependencies": {
     "@graphql-codegen/java-common": "1.13.1",
