--- a/packages/plugins/java/common/package.json
+++ b/packages/plugins/java/common/package.json
@@ -2,12 +2,14 @@
   "name": "@graphql-codegen/java-common",
   "version": "1.13.1",
   "description": "GraphQL Code Generator utils library for developing Java plugins",
-  "repository": "git@github.com:dotansimha/graphql-code-generator.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dotansimha/graphql-code-generator.git",
+    "directory": "packages/plugins/java/common"
+  },
   "license": "MIT",
   "scripts": {
-    "lint": "eslint **/*.ts",
-    "prepack": "bob-update-version",
-    "build": "bob"
+    "lint": "eslint **/*.ts"
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.1",
