--- a/packages/plugins/other/visitor-plugin-common/package.json
+++ b/packages/plugins/other/visitor-plugin-common/package.json
@@ -2,11 +2,14 @@
   "name": "@graphql-codegen/visitor-plugin-common",
   "version": "1.13.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dotansimha/graphql-code-generator.git",
+    "directory": "packages/plugins/other/visitor-plugin-common"
+  },
   "scripts": {
     "lint": "eslint **/*.ts",
-    "prepack": "bob-update-version",
-    "test": "jest --no-watchman --config ../../../../jest.config.js",
-    "build": "bob"
+    "test": "jest --no-watchman --config ../../../../jest.config.js"
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.1",
