--- a/packages/plugins/typescript/document-nodes/package.json
+++ b/packages/plugins/typescript/document-nodes/package.json
@@ -2,12 +2,14 @@
   "name": "@graphql-codegen/typescript-document-nodes",
   "version": "1.13.1",
   "description": "GraphQL Code Generator plugin for generating TypeScript modules with embedded GraphQL document nodes",
-  "repository": "git@github.com:dotansimha/graphql-code-generator.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dotansimha/graphql-code-generator.git",
+    "directory": "packages/plugins/typescript/document-nodes"
+  },
   "license": "MIT",
   "scripts": {
     "lint": "eslint **/*.ts",
-    "prepack": "bob-update-version",
-    "build": "bob",
     "test": "jest --no-watchman --config ../../../../jest.config.js"
   },
   "dependencies": {
