--- a/packages/presets/import-types/package.json
+++ b/packages/presets/import-types/package.json
@@ -2,12 +2,14 @@
   "name": "@graphql-codegen/import-types-preset",
   "version": "1.13.1",
   "description": "GraphQL Code Generator preset for importing types to operation file",
-  "repository": "git@github.com:dotansimha/graphql-code-generator.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dotansimha/graphql-code-generator.git",
+    "directory": "packages/presets/import-types"
+  },
   "license": "MIT",
   "scripts": {
     "lint": "eslint **/*.ts",
-    "prepack": "bob-update-version",
-    "build": "bob",
     "test": "jest --no-watchman --config ../../../jest.config.js"
   },
   "dependencies": {
