--- a/packages/utils/plugins-helpers/package.json
+++ b/packages/utils/plugins-helpers/package.json
@@ -2,13 +2,15 @@
   "name": "@graphql-codegen/plugin-helpers",
   "version": "1.13.1",
   "description": "GraphQL Code Generator common utils and types",
-  "repository": "git@github.com:dotansimha/graphql-code-generator.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dotansimha/graphql-code-generator.git",
+    "directory": "packages/utils/plugins-helpers"
+  },
   "license": "MIT",
   "scripts": {
     "lint": "eslint **/*.ts",
-    "prepack": "bob-update-version",
-    "test": "jest --no-watchman --config ../../../jest.config.js",
-    "build": "bob"
+    "test": "jest --no-watchman --config ../../../jest.config.js"
   },
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0"
