Use prepack to update versions

--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "lint": "eslint **/*.ts",
-    "test": "jest --no-watchman"
+    "test": "jest --no-watchman",
+    "prepack": "../../scripts/prepack.js"
   },
   "keywords": [
     "gql",
