--- a/packages/graphql-codegen-core/package.json
+++ b/packages/graphql-codegen-core/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "lint": "eslint **/*.ts",
-    "test": "jest --no-watchman --config ../../jest.config.js"
+    "test": "jest --no-watchman --config ../../jest.config.js",
+    "prepack": "../../scripts/prepack.js"
   },
   "keywords": [
     "gql",
