--- a/packages/plugins/other/visitor-plugin-common/package.json
+++ b/packages/plugins/other/visitor-plugin-common/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "lint": "eslint **/*.ts",
-    "test": "jest --no-watchman --config ../../../../jest.config.js"
+    "test": "jest --no-watchman --config ../../../../jest.config.js",
+    "prepack": "../../../../scripts/prepack.js"
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.1",
