--- a/packages/utils/config-md-generator/package.json
+++ b/packages/utils/config-md-generator/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint **/*.ts",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "prepack": "../../../scripts/prepack.js"
   },
   "main": "dist/index.cjs.js",	
   "module": "dist/index.esm.js",	
