--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "clean": "rimraf node_modules packages/{*,plugins/*/*,presets/*,utils/*}/node_modules",
     "prebuild": "rimraf packages/{*,plugins/*/*,presets/*,utils/*}/dist",
-    "build": "tsc --project tsconfig.json && node ./scripts/bundle.js",
+    "build": "tsc --project tsconfig.json && ./scripts/bundle.js",
     "test": "jest --no-watchman",
     "lint": "eslint --ext .ts .",
     "prettier": "prettier --ignore-path .gitignore --write --list-different \"**/*.{ts,tsx,graphql,yml}\"",
@@ -41,8 +41,7 @@
     ]
   },
   "devDependencies": {
-    "bob-the-bundler": "0.3.4",
-    "dfds-github-scripts": "0.0.2",
+    "axios": "0.19.2",
     "@apollo/react-common": "3.1.3",
     "@apollo/react-components": "3.1.3",
     "@apollo/react-hoc": "3.1.3",
