Try to set up debugging and fail.

--- a/packages/plugins/other/visitor-plugin-common/package.json
+++ b/packages/plugins/other/visitor-plugin-common/package.json
@@ -39,7 +39,8 @@
     "definition": "dist/index.d.ts"
   },
   "buildOptions": {
-    "input": "./src/index.ts"
+    "input": "./src/index.ts",
+    "sourcemap": true
   },
   "jest-junit": {
     "outputDirectory": "../../../../test-results/visitor-plugin-common"
