--- a/packages/plugins/python/operations/package.json
+++ b/packages/plugins/python/operations/package.json
@@ -30,7 +30,7 @@
   },
   "sideEffects": false,
   "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/index.esm.mjs",
   "typings": "dist/index.d.ts",
   "typescript": {
     "definition": "dist/index.d.ts"
