--- a/packages/graphql-codegen-cli/package.json
+++ b/packages/graphql-codegen-cli/package.json
@@ -42,16 +42,16 @@
   "dependencies": {
     "@graphql-codegen/core": "1.13.1",
     "@graphql-codegen/plugin-helpers": "1.13.1",
-    "@graphql-toolkit/apollo-engine-loader": "0.10.2-alpha-1e5a81e.3+1e5a81e",
-    "@graphql-toolkit/code-file-loader": "0.10.2-alpha-1e5a81e.3+1e5a81e",
-    "@graphql-toolkit/common": "0.10.2-alpha-1e5a81e.3+1e5a81e",
-    "@graphql-toolkit/core": "0.10.2-alpha-1e5a81e.3+1e5a81e",
-    "@graphql-toolkit/git-loader": "0.10.2-alpha-1e5a81e.3+1e5a81e",
-    "@graphql-toolkit/github-loader": "0.10.2-alpha-1e5a81e.3+1e5a81e",
-    "@graphql-toolkit/graphql-file-loader": "0.10.2-alpha-1e5a81e.3+1e5a81e",
-    "@graphql-toolkit/json-file-loader": "0.10.2-alpha-1e5a81e.3+1e5a81e",
-    "@graphql-toolkit/prisma-loader": "0.10.2-alpha-1e5a81e.3+1e5a81e",
-    "@graphql-toolkit/url-loader": "0.10.2-alpha-1e5a81e.3+1e5a81e",
+    "@graphql-toolkit/apollo-engine-loader": "0.10.2",
+    "@graphql-toolkit/code-file-loader": "0.10.2",
+    "@graphql-toolkit/common": "0.10.2",
+    "@graphql-toolkit/core": "0.10.2",
+    "@graphql-toolkit/git-loader": "0.10.2",
+    "@graphql-toolkit/github-loader": "0.10.2",
+    "@graphql-toolkit/graphql-file-loader": "0.10.2",
+    "@graphql-toolkit/json-file-loader": "0.10.2",
+    "@graphql-toolkit/prisma-loader": "0.10.2",
+    "@graphql-toolkit/url-loader": "0.10.2",
     "@types/debounce": "1.2.0",
     "@types/is-glob": "4.0.1",
     "@types/mkdirp": "1.0.0",
