--- a/packages/plugins/other/schema-ast/package.json
+++ b/packages/plugins/other/schema-ast/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.1",
-    "@graphql-toolkit/common": "0.10.2-alpha-1e5a81e.3+1e5a81e",
+    "@graphql-toolkit/common": "0.10.2",
     "tslib": "1.11.1"
   },
   "peerDependencies": {
